# nowclaire

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: build.c  build.h  config.c  config.h  file_handler.c  file_handler.h  files.c  files.h  list.c  list.h  logger.h  main.c  scan.c  scan.h
tests/: main.c  parse_args_test.c  parse_args_test.h  test.h
